Added physics.cpp! Probeerde een bal te simuleren, maar die vloog mysterieuserwijze omhoog ipv omlaag, onafhankelijk van de zwaartekracht, dus dat was nogal raar. :)

--- a/PWS2018Sol/PWS2018/PWS2018.vcxproj
+++ b/PWS2018Sol/PWS2018/PWS2018.vcxproj
@@ -156,6 +156,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="button.cpp" />
+    <ClCompile Include="physics.cpp" />
     <ClCompile Include="util.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="simstate.cpp" />
@@ -163,6 +164,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="button.hpp" />
+    <ClInclude Include="physics.hpp" />
     <ClInclude Include="util.hpp" />
     <ClInclude Include="main.hpp" />
     <ClInclude Include="simstate.hpp" />
