--- a/PWS2018Sol/PWS2018/PWS2018.vcxproj.filters
+++ b/PWS2018Sol/PWS2018/PWS2018.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClCompile Include="main.cpp">
       <Filter>main</Filter>
     </ClCompile>
+    <ClCompile Include="creature.cpp">
+      <Filter>Simulation</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="button.hpp">
